--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda commerce</title>
+    <title>My Panda commerce</title>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom css style  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <!-- Navbar stasts  -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""
                         class="d-inline-block align-text-top"></a>
@@ -28,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoe">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#Bagpack">Bagpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
 
 
@@ -43,11 +47,14 @@
                 </div>
             </div>
         </nav>
+        <!-- navbar end  -->
+
+        <!-- image slider carousel  -->
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active rounded">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-info-background bg-gradient d-flex align-items-center">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
@@ -55,7 +62,7 @@
                                     front of
                                     funky world.</p>
                                 <h1>$230</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="bg-buy-now">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -64,7 +71,7 @@
 
                     </div>
                     <div class="carousel-item rounded">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-info-background bg-gradient d-flex align-items-center">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
@@ -72,7 +79,7 @@
                                     front of
                                     funky world.</p>
                                 <h1>$230</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="bg-buy-now">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -81,7 +88,7 @@
 
                     </div>
                     <div class="carousel-item rounded">
-                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                        <div class="row p-5 panda-info-background bg-gradient d-flex align-items-center">
                             <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
@@ -89,7 +96,7 @@
                                     front of
                                     funky world.</p>
                                 <h1>$230</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="bg-buy-now">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -111,12 +118,18 @@
                 </button>
             </div>
         </section>
+        <!-- Carousel end  -->
 
 
     </header>
     <main>
+        <!--  categories start -->
+
+
+        <!-- shoes start  -->
+
         <section>
-            <div class="container my-5">
+            <div class="categories container my-5">
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6">
                         <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -139,9 +152,118 @@
                 </div>
 
             </div>
+            <!-- categories end  -->
+        </section>
+        <section id="shoe" class="container">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nokia 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">buy now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes end  -->
+        <!-- Backpack starts  -->
+        <section id="Bagpack" class="container my-5">
+            <h2>Bagpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag
+                            </h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">Buy now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg border-0 h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="bg-buy-now">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Backpack end  -->
+        <!-- Subscribe start  -->
+        <section id="subscribe" style="height:300px;"
+            class="container panda-info-background d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" placeholder="your email">
+                <br>
+                <button class="bg-buy-now">Submit</button>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="mt-5 text-center">
+        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
     <!-- bootstrap script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
