--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </div>
             </div>
         </nav>
+        <br>
         <!-- navbar end  -->
 
         <!-- image slider carousel  -->
@@ -89,7 +90,7 @@
                     </div>
                     <div class="carousel-item rounded">
                         <div class="row p-5 panda-info-background bg-gradient d-flex align-items-center">
-                            <div class="col-7">
+                            <div class="col-7 m-3">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
                                     This is the best headphone in the world for people who just want to waste time in
@@ -262,7 +263,7 @@
         </section>
     </main>
     <footer class="mt-5 text-center">
-        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
     <!-- bootstrap script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
