--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="carousel-item rounded">
                         <div class="row p-5 panda-info-background bg-gradient d-flex align-items-center">
-                            <div class="col-7 m-3">
+                            <div class="col-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
                                     This is the best headphone in the world for people who just want to waste time in
